--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-status-bar" content="#002345" />
     
-    <script src="./main.addon.js" type="text/javascript" charset="utf-8"></script>
+    <script src="private/main.addon.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-    <p style="text-align: center;">Bienvenido a '<strong>Only the shell</strong>' (v1.0.2)</p>
+    <p style="text-align: center;">Bienvenido a '<strong>Only the shell</strong>' (v1.0.4)</p>
     <script type="text/javascript" charset="utf-8">
         window.addEventListener("load", function () {
             if(/* location.port === "8422" && */ 'serviceWorker' in navigator)
@@ -30,7 +30,7 @@
         });
         
         /********************************/
-        window.install ??= async function(path = "./main.addon.js", cacheName = "static") {
+        window.install ??= async function(path = "./private/main.addon.js", cacheName = "static") {
             const f = document.createElement("input");
             f.type = "file";f.click();
             await new Promise(res => f.onchange = res);
